--- a/src/components/CardMovie.module.css
+++ b/src/components/CardMovie.module.css
@@ -1,5 +1,5 @@
 .card_box {
-    padding: 20px;
+    padding: 10px;
     display: flex;
 }
 
@@ -20,4 +20,8 @@
     font-size: 12px;
     padding: 8px;
     border-radius: 5px;
+}
+
+.img {
+    width: 100%;
 }
