--- a/src/components/CardMovie.module.css
+++ b/src/components/CardMovie.module.css
@@ -7,10 +7,7 @@
     border: solid 1px rgb(173, 198, 252);
     border-radius: 5px;
     padding: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    height: 100%;
 }
 
 .link {
@@ -23,4 +20,30 @@
 
 .img {
     width: 100%;
+    height: 400px;
+}
+
+.title {
+    font-weight: 800;
+    font-size: 1.5rem;
+}
+
+.director {
+    font-style: italic;
+    color: rgb(57, 55, 65);
+    margin-bottom: 10px;
+}
+
+p {
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.avg_vote {
+    margin-bottom: 10px;
+    font-size: 12px;
+}
+
+.col_4 {
+    flex-wrap: wrap;
 }
