--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -14,3 +14,45 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.title {
+    font-weight: 800;
+    font-size: 50px;
+    text-align: center;
+    margin: 20px;
+    color: rgb(33, 32, 39);
+}
+
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+
+.input {
+    width: 300px;
+    height: 30px;
+    border-radius: 8px;
+    padding: 8px;
+    border: solid 1px rgb(173, 198, 252);
+    font-family: "Poppins", serif;
+}
+
+.btn {
+    height: 30px;
+    width: 60px;
+    border-radius: 8px;
+    padding: 8px;
+    font-family: "Poppins", serif;
+    background-color: rgb(27, 24, 59);
+    color: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.btn:hover {
+    background-color: rgb(173, 198, 252);
+}
