--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -15,6 +15,15 @@
     flex-wrap: wrap;
 }
 
+/* .row_card {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col_4 {
+    width: calc(100% /3);
+} */
+
 .title {
     font-weight: 800;
     font-size: 50px;
