--- a/src/components/CardMovie.module.css
+++ b/src/components/CardMovie.module.css
@@ -20,7 +20,7 @@
 
 .img {
     width: 100%;
-    height: 400px;
+    aspect-ratio: 2/3;
 }
 
 .title {
@@ -46,4 +46,15 @@ p {
 
 .col_4 {
     flex-wrap: wrap;
+}
+
+@media screen and (max-width: 768px) {
+    .img {
+        width: 100%;
+        aspect-ratio: 2/3;
+    }
+
+    .card {
+        width: 580px;
+    }
 }
